alignment fix for low horizontal resolution view

--- a/html/css/theme.css
+++ b/html/css/theme.css
@@ -8,8 +8,8 @@ padding-top:15px;
 }
 
 .col-md-3 {
-padding-bottom:15px;
 padding-top:15px;
+padding-bottom:85px;
 text-align:center;
 }
 
